--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -114,10 +114,10 @@
               </div>
 
               <div class="text-center mt-4">
-                <a routerLink="/admin/producto/plist" class="btn btn-secondary me-4">
+                <a routerLink="/admin/producto/xproveedor/plist" class="btn btn-secondary me-4">
                   <i class="bi bi-arrow-left"></i> Volver
                 </a>
-                <button type="submit" class="btn btn-success" [disabled]="oProductoForm.invalid">
+                <button type="submit" class="btn btn-success">
                   <i class="bi bi-save"></i> Guardar
                 </button>
               </div>
