--- a/src/app/shared/shared.bynif.routed/shared.bynif.routed.component.html
+++ b/src/app/shared/shared.bynif.routed/shared.bynif.routed.component.html
@@ -2,9 +2,12 @@
   <div class="col-lg-7 col-md-10 col-sm-12">
     <h1 class="my-5 text-center">
       <i class="bi bi-card-list"></i>
-      Detalles de {{ oProveedor.nif }}
-      <i class="bi bi-person-circle"></i>
+      Detalles de EMPRESA
     </h1>
+    <h2 class="text-center">
+      <i class="bi bi-person-circle"></i>
+      {{ oProveedor.descripcion }} / {{oProveedor.nif}}
+    </h2>
     <br />
     <table class="table table-striped table-bordered my-5 text-center proveedor-table">
       <tbody>
