--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.css
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.css
@@ -64,3 +64,15 @@
     }
   }
   
+
+  .navbar-brand img {
+    max-width: 150px;
+    height: auto;
+  }
+  
+  @media (max-width: 768px) {
+    .navbar-brand img {
+      max-width: 120px;
+    }
+  }
+  
