--- a/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
@@ -16,7 +16,25 @@
           (keyup)="filter($event)"
           [(ngModel)]="strFiltro"
         />
+
+        <div class="d-inline-flex mx-2">
+          <nav class="my-4">
+            <ul class="pagination justify-content-center">
+              <li class="page-item" [class.active]="nRpp === 10">
+                <a class="page-link" (click)="goToRpp(10)" href="#">10</a>
+              </li>
+              <li class="page-item" [class.active]="nRpp === 50">
+                <a class="page-link" (click)="goToRpp(50)" href="#">50</a>
+              </li>
+              <li class="page-item" [class.active]="nRpp === 100">
+                <a class="page-link" (click)="goToRpp(100)" href="#">100</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
+
+      
 
       <!-- Info filtro y cantidad -->
       <div class="d-flex justify-content-between">
@@ -32,6 +50,11 @@
         </h5>
       </div>
 
+      <!-- Mensaje cuando no hay artículos -->
+      <div *ngIf="noArticulosMessage" class="alert alert-info text-center">
+        {{ noArticulosMessage }}
+      </div>
+
       <!-- Loader -->
       <div *ngIf="loading" class="text-center my-4">
         <div class="spinner-border text-success" role="status">
@@ -40,7 +63,7 @@
       </div>
 
       <!-- Tabla -->
-      <div class="table-responsive" *ngIf="!loading">
+      <div class="table-responsive" *ngIf="!loading && !noArticulosMessage">
         <table class="table table-striped table-bordered align-middle text-center">
           <thead class="table-success text-white bg-success">
             <tr>
@@ -157,7 +180,7 @@
       </div>
 
       <!-- Paginación -->
-      <nav class="mt-3">
+      <nav class="mt-3" *ngIf="oPage && oPage.totalPages > 1">
         <ul class="pagination justify-content-center">
           <li class="page-item" [class.disabled]="nPage <= 0">
             <a class="page-link" (click)="goToPrev()">Anterior</a>
