--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg custom-navbar shadow-sm">
   <div class="container-fluid">
-    <!-- Logo / Marca -->
-    <a class="navbar-brand text-white fw-bold" href="#">FamilyCash Admin</a>
+    <!-- Logo -->
+    <a class="navbar-brand" href="/home">
+      <img src="assets/img/supermercados-family-cash.png" width="150" alt="Logo Family Cash" class="d-inline-block align-text-top">
+    </a>
 
     <!-- Botón responsive hamburguesa -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -39,7 +41,10 @@
         </span>
       } @else {
         <span class="navbar-text text-white me-3">
-          <i class="bi bi-person-circle"></i> <a href="/bynif/{{ userNif }}" class="text-white text-decoration-underline">{{ userNif }}</a>
+          <i class="bi bi-person-circle"></i>
+          <a href="/bynif/{{ userNif }}" class="text-white text-decoration-underline">
+            {{ proveedorDescripcion }} ({{ userNif }})
+          </a>                   
         </span>
         <span class="navbar-text">
           <a href="/logout" class="btn btn-outline-light">
