--- a/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
@@ -112,52 +112,52 @@
           </thead>
           <tbody>
             <tr *ngFor="let producto of oPage?.content" class="clickable-row" (click)="edit(producto)">
-              <td [ngClass]="getCellClass(producto.id)">{{ producto.id || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.descripcion)">{{ producto.descripcion || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.descripcionTic)">{{ producto.descripcionTic || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.departamento)">{{ producto.departamento || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.familia)">{{ producto.familia || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.subfamilia)">{{ producto.subfamilia || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.marca)">{{ producto.marca || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.unidadDeMedida)">{{ producto.unidadDeMedida || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.cantidad)">{{ producto.cantidad || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.centralizado)">{{ producto.centralizado || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.apeso)">{{ producto.apeso || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.unidadDeCaja)">{{ producto.unidadDeCaja || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.unidadDeServicio)">{{ producto.unidadDeServicio || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pk)">{{ producto.pk || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.cajasCapa)">{{ producto.cajasCapa || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.cajasPalet)">{{ producto.cajasPalet || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.proveedor)">{{ producto.proveedor || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.referenciaProveedor)">{{ producto.referenciaProveedor || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.ean)">{{ producto.ean || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.ean_c)">{{ producto.ean_c || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.ean_p)">{{ producto.ean_p || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.largo)">{{ producto.largo || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.ancho)">{{ producto.ancho || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.alto)">{{ producto.alto || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.peso)">{{ producto.peso || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.diasCaducidad)">{{ producto.diasCaducidad || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.ara_cen)">{{ producto.ara_cen || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.iva)">{{ producto.iva || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.precioVenta)">{{ producto.precioVenta || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pvp_hom)">{{ producto.pvp_hom || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pvp_and)">{{ producto.pvp_and || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pvp_cat)">{{ producto.pvp_cat || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.precioTarifa)">{{ producto.precioTarifa || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pro_fac)">{{ producto.pro_fac || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.precioNeto)">{{ producto.precioNeto || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pro_ffac)">{{ producto.pro_ffac || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pro_neton)">{{ producto.pro_neton || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.art_mkd)">{{ producto.art_mkd || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.articuloSustituido)">{{ producto.articuloSustituido || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.insertedBy)">{{ producto.insertedBy || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.updateBy)">{{ producto.updateBy || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.status)">{{ producto.status }}</td>
-              <td [ngClass]="getCellClass(producto.observaciones)">{{ producto.observaciones || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.partidaArancelaria)">{{ producto.partidaArancelaria || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.pvp_mel)">{{ producto.pvp_mel || 'Sin dato' }}</td>
-              <td [ngClass]="getCellClass(producto.paisOrigen)">{{ producto.paisOrigen || 'Sin dato' }}</td>
+              <td [ngClass]="getCellClass(producto.id)">{{ getCellDisplay(producto.id)}}</td>
+              <td [ngClass]="getCellClass(producto.descripcion)">{{ getCellDisplay(producto.descripcion)}}</td>
+              <td [ngClass]="getCellClass(producto.descripcionTic)">{{ getCellDisplay(producto.descripcionTic)}}</td>
+              <td [ngClass]="getCellClass(producto.departamento)">{{ getCellDisplay(producto.departamento)}}</td>
+              <td [ngClass]="getCellClass(producto.familia)">{{ getCellDisplay(producto.familia)}}</td>
+              <td [ngClass]="getCellClass(producto.subfamilia)">{{ getCellDisplay(producto.subfamilia)}}</td>
+              <td [ngClass]="getCellClass(producto.marca)">{{ getCellDisplay(producto.marca)}}</td>
+              <td [ngClass]="getCellClass(producto.unidadDeMedida)">{{ getCellDisplay(producto.unidadDeMedida)}}</td>
+              <td [ngClass]="getCellClass(producto.cantidad)">{{ getCellDisplay(producto.cantidad)}}</td>
+              <td [ngClass]="getCellClass(producto.centralizado)">{{ getCellDisplay(producto.centralizado)}}</td>
+              <td [ngClass]="getCellClass(producto.apeso)">{{ getCellDisplay(producto.apeso)}}</td>
+              <td [ngClass]="getCellClass(producto.unidadDeCaja)">{{ getCellDisplay(producto.unidadDeCaja)}}</td>
+              <td [ngClass]="getCellClass(producto.unidadDeServicio)">{{ getCellDisplay(producto.unidadDeServicio)}}</td>
+              <td [ngClass]="getCellClass(producto.pk)">{{ getCellDisplay(producto.pk)}}</td>
+              <td [ngClass]="getCellClass(producto.cajasCapa)">{{ getCellDisplay(producto.cajasCapa)}}</td>
+              <td [ngClass]="getCellClass(producto.cajasPalet)">{{ getCellDisplay(producto.cajasPalet)}}</td>
+              <td [ngClass]="getCellClass(producto.proveedor)">{{ getCellDisplay(producto.proveedor)}}</td>
+              <td [ngClass]="getCellClass(producto.referenciaProveedor)">{{ getCellDisplay(producto.referenciaProveedor)}}</td>
+              <td [ngClass]="getCellClass(producto.ean)">{{ getCellDisplay(producto.ean)}}</td>
+              <td [ngClass]="getCellClass(producto.ean_c)">{{ getCellDisplay(producto.ean_c)}}</td>
+              <td [ngClass]="getCellClass(producto.ean_p)">{{ getCellDisplay(producto.ean_p)}}</td>
+              <td [ngClass]="getCellClass(producto.largo)">{{ getCellDisplay(producto.largo)}}</td>
+              <td [ngClass]="getCellClass(producto.ancho)">{{ getCellDisplay(producto.ancho)}}</td>
+              <td [ngClass]="getCellClass(producto.alto)">{{ getCellDisplay(producto.alto)}}</td>
+              <td [ngClass]="getCellClass(producto.peso)">{{ getCellDisplay(producto.peso)}}</td>
+              <td [ngClass]="getCellClass(producto.diasCaducidad)">{{ getCellDisplay(producto.diasCaducidad)}}</td>
+              <td [ngClass]="getCellClass(producto.ara_cen)">{{ getCellDisplay(producto.ara_cen)}}</td>
+              <td [ngClass]="getCellClass(producto.iva)">{{ getCellDisplay(producto.iva)}}</td>
+              <td [ngClass]="getCellClass(producto.precioVenta)">{{ getCellDisplay(producto.precioVenta)}}</td>
+              <td [ngClass]="getCellClass(producto.pvp_hom)">{{ getCellDisplay(producto.pvp_hom)}}</td>
+              <td [ngClass]="getCellClass(producto.pvp_and)">{{ getCellDisplay(producto.pvp_and)}}</td>
+              <td [ngClass]="getCellClass(producto.pvp_cat)">{{ getCellDisplay(producto.pvp_cat)}}</td>
+              <td [ngClass]="getCellClass(producto.precioTarifa)">{{ getCellDisplay(producto.precioTarifa)}}</td>
+              <td [ngClass]="getCellClass(producto.pro_fac)">{{ getCellDisplay(producto.pro_fac)}}</td>
+              <td [ngClass]="getCellClass(producto.precioNeto)">{{ getCellDisplay(producto.precioNeto)}}</td>
+              <td [ngClass]="getCellClass(producto.pro_ffac)">{{ getCellDisplay(producto.pro_ffac)}}</td>
+              <td [ngClass]="getCellClass(producto.pro_neton)">{{ getCellDisplay(producto.pro_neton)}}</td>
+              <td [ngClass]="getCellClass(producto.art_mkd)">{{ getCellDisplay(producto.art_mkd)}}</td>
+              <td [ngClass]="getCellClass(producto.articuloSustituido)">{{ getCellDisplay(producto.articuloSustituido)}}</td>
+              <td [ngClass]="getCellClass(producto.insertedBy)">{{ getCellDisplay(producto.insertedBy)}}</td>
+              <td [ngClass]="getCellClass(producto.updateBy)">{{ getCellDisplay(producto.updateBy)}}</td>
+              <td [ngClass]="getCellClass(producto.status)">{{ getCellDisplay(producto.status) }}</td>
+              <td [ngClass]="getCellClass(producto.observaciones)">{{ getCellDisplay(producto.observaciones)}}</td>
+              <td [ngClass]="getCellClass(producto.partidaArancelaria)">{{ getCellDisplay(producto.partidaArancelaria)}}</td>
+              <td [ngClass]="getCellClass(producto.pvp_mel)">{{ getCellDisplay(producto.pvp_mel)}}</td>
+              <td [ngClass]="getCellClass(producto.paisOrigen)">{{ getCellDisplay(producto.paisOrigen)}}</td>
               <td>
                 <div class="btn-group btn-group-sm">
                   <button class="btn btn-success" (click)="view(producto); $event.stopPropagation()">
