--- a/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
@@ -206,7 +206,7 @@
               id="goToPage"
               type="number"
               min="1"
-              [max]="oPage?.totalPages || 1"
+              [max]="oPage.totalPages || 1"
               [(ngModel)]="customPage"
               class="go-to-page-input"
               [class.invalid]="isInvalidCustomPage()"
