--- a/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
@@ -4,7 +4,7 @@
 
       <!-- Título -->
       <h2 class="mb-4 text-center">
-        <i class="bi bi-list"></i> Lista de Productos
+        <i class="bi bi-list"></i> Lista de Productos de {{ proveedorDescripcion }}
       </h2>
 
       <!-- Buscador -->
