--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -1,244 +1,114 @@
 <div class="row justify-content-center m-3">
-  <div class="col-lg-7 col-md-10 col-sm-12">
-    <h1 class="my-5 text-center">
-      <i class="bi bi-card-list"></i>
-      Detalle de Producto
-      <i class="bi bi-box-seam"></i>
-    </h1>
+  <div class="col-lg-10 col-md-12 col-sm-12 d-flex flex-wrap">
 
-    <table class="table table-striped table-bordered my-5 text-center">
-      <tbody>
-        <!-- IDENTIFICACIÓN -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">ID</th>
-          <td class="text-start ps-5">{{ oProducto.id | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Código PK</th>
-          <td class="text-start ps-5">{{ oProducto.pk | noDisponible }}</td>
-        </tr>
+    <!-- Parte izquierda: Detalles del producto -->
+    <div class="col-lg-6 col-md-12">
+      <h1 class="text-center mb-4">
+        <i class="bi bi-card-list"></i>
+        Detalle de Producto
+        <i class="bi bi-box-seam"></i>
+      </h1>
 
-        <!-- INFORMACIÓN GENERAL -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Descripción</th>
-          <td class="text-start ps-5">{{ oProducto.descripcion | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Descripción TIC</th>
-          <td class="text-start ps-5">{{ oProducto.descripcionTic | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Departamento</th>
-          <td class="text-start ps-5">{{ oProducto.departamento | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Familia / Subfamilia</th>
-          <td class="text-start ps-5">
-            {{ oProducto.familia | noDisponible }} / {{ oProducto.subfamilia | noDisponible }}
-          </td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Marca</th>
-          <td class="text-start ps-5">{{ oProducto.marca | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Unidad de Medida</th>
-          <td class="text-start ps-5">{{ oProducto.unidadDeMedida | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Cantidad</th>
-          <td class="text-start ps-5">{{ oProducto.cantidad | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Centralizado</th>
-          <td class="text-start ps-5">{{ oProducto.centralizado | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Apeso</th>
-          <td class="text-start ps-5">{{ oProducto.apeso | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Unidad de Caja / Servicio</th>
-          <td class="text-start ps-5">
-            {{ oProducto.unidadDeCaja | noDisponible }} / {{ oProducto.unidadDeServicio | noDisponible }}
-          </td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Cajas Capa / Palet</th>
-          <td class="text-start ps-5">
-            {{ oProducto.cajasCapa | noDisponible }} / {{ oProducto.cajasPalet | noDisponible }}
-          </td>
-        </tr>
+      <table class="table table-striped table-bordered text-center table-responsive">
+        <tbody>
+          <!-- IDENTIFICACIÓN -->
+          <tr><th>ID</th><td>{{ oProducto.id | noDisponible }}</td></tr>
+          <tr><th>Código PK</th><td>{{ oProducto.pk | noDisponible }}</td></tr>
 
-        <!-- CÓDIGOS EAN Y DIMENSIONES -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">EAN</th>
-          <td class="text-start ps-5">{{ oProducto.ean | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">EAN C / EAN P</th>
-          <td class="text-start ps-5">
-            {{ oProducto.ean_c | noDisponible }} / {{ oProducto.ean_p | noDisponible }}
-          </td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Largo x Ancho x Alto</th>
-          <td class="text-start ps-5">
-            {{ oProducto.largo | noDisponible }} x {{ oProducto.ancho | noDisponible }} x
-            {{ oProducto.alto | noDisponible }}
-          </td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Peso</th>
-          <td class="text-start ps-5">{{ oProducto.peso | noDisponible }} kg</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Días Caducidad</th>
-          <td class="text-start ps-5">{{ oProducto.diasCaducidad | noDisponible }}</td>
-        </tr>
+          <!-- INFORMACIÓN GENERAL -->
+          <tr><th>Descripción</th><td>{{ oProducto.descripcion | noDisponible }}</td></tr>
+          <tr><th>Descripción TIC</th><td>{{ oProducto.descripcionTic | noDisponible }}</td></tr>
+          <tr><th>Departamento</th><td>{{ oProducto.departamento | noDisponible }}</td></tr>
+          <tr><th>Familia / Subfamilia</th><td>{{ oProducto.familia | noDisponible }} / {{ oProducto.subfamilia | noDisponible }}</td></tr>
+          <tr><th>Marca</th><td>{{ oProducto.marca | noDisponible }}</td></tr>
+          <tr><th>Unidad de Medida</th><td>{{ oProducto.unidadDeMedida | noDisponible }}</td></tr>
+          <tr><th>Cantidad</th><td>{{ oProducto.cantidad | noDisponible }}</td></tr>
+          <tr><th>Centralizado</th><td>{{ oProducto.centralizado | noDisponible }}</td></tr>
+          <tr><th>Apeso</th><td>{{ oProducto.apeso | noDisponible }}</td></tr>
+          <tr><th>Unidad de Caja / Servicio</th><td>{{ oProducto.unidadDeCaja | noDisponible }} / {{ oProducto.unidadDeServicio | noDisponible }}</td></tr>
+          <tr><th>Cajas Capa / Palet</th><td>{{ oProducto.cajasCapa | noDisponible }} / {{ oProducto.cajasPalet | noDisponible }}</td></tr>
 
-        <!-- INFORMACIÓN FISCAL -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">ARA CEN</th>
-          <td class="text-start ps-5">{{ oProducto.ara_cen | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Partida Arancelaria</th>
-          <td class="text-start ps-5">{{ oProducto.partidaArancelaria | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">País Origen</th>
-          <td class="text-start ps-5">{{ oProducto.paisOrigen | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">IVA</th>
-          <td class="text-start ps-5">{{ oProducto.iva | noDisponible }}</td>
-        </tr>
+          <!-- CÓDIGOS EAN Y DIMENSIONES -->
+          <tr><th>EAN</th><td>{{ oProducto.ean | noDisponible }}</td></tr>
+          <tr><th>EAN C / EAN P</th><td>{{ oProducto.ean_c | noDisponible }} / {{ oProducto.ean_p | noDisponible }}</td></tr>
+          <tr><th>Largo x Ancho x Alto</th><td>{{ oProducto.largo | noDisponible }} x {{ oProducto.ancho | noDisponible }} x {{ oProducto.alto | noDisponible }}</td></tr>
+          <tr><th>Peso</th><td>{{ oProducto.peso | noDisponible }} kg</td></tr>
+          <tr><th>Días Caducidad</th><td>{{ oProducto.diasCaducidad | noDisponible }}</td></tr>
 
-        <!-- PRECIOS -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Precio Venta</th>
-          <td class="text-start ps-5">{{ oProducto.precioVenta | noDisponible }} €</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">PVP HOM / AND / CAT / MEL</th>
-          <td class="text-start ps-5">
-            {{ oProducto.pvp_hom | noDisponible }} / {{ oProducto.pvp_and | noDisponible }} /
-            {{ oProducto.pvp_cat | noDisponible }} / {{ oProducto.pvp_mel | noDisponible }} €
-          </td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Precio Tarifa</th>
-          <td class="text-start ps-5">{{ oProducto.precioTarifa | noDisponible }} €</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Precio Neto</th>
-          <td class="text-start ps-5">{{ oProducto.precioNeto | noDisponible }} €</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">PRO FAC / FFAC / NETON</th>
-          <td class="text-start ps-5">
-            {{ oProducto.pro_fac | noDisponible }} / {{ oProducto.pro_ffac | noDisponible }} /
-            {{ oProducto.pro_neton | noDisponible }}
-          </td>
-        </tr>
+          <!-- INFORMACIÓN FISCAL -->
+          <tr><th>ARA CEN</th><td>{{ oProducto.ara_cen | noDisponible }}</td></tr>
+          <tr><th>Partida Arancelaria</th><td>{{ oProducto.partidaArancelaria | noDisponible }}</td></tr>
+          <tr><th>País Origen</th><td>{{ oProducto.paisOrigen | noDisponible }}</td></tr>
+          <tr><th>IVA</th><td>{{ oProducto.iva | noDisponible }}</td></tr>
 
-        <!-- PROVEEDOR -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Proveedor</th>
-          <td class="text-start ps-5">{{ oProducto.proveedor | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Referencia Proveedor</th>
-          <td class="text-start ps-5">{{ oProducto.referenciaProveedor | noDisponible }}</td>
-        </tr>
+          <!-- PRECIOS -->
+          <tr><th>Precio Venta</th><td>{{ oProducto.precioVenta | noDisponible }} €</td></tr>
+          <tr><th>PVP HOM / AND / CAT / MEL</th><td>{{ oProducto.pvp_hom | noDisponible }} / {{ oProducto.pvp_and | noDisponible }} / {{ oProducto.pvp_cat | noDisponible }} / {{ oProducto.pvp_mel | noDisponible }} €</td></tr>
+          <tr><th>Precio Tarifa</th><td>{{ oProducto.precioTarifa | noDisponible }} €</td></tr>
+          <tr><th>Precio Neto</th><td>{{ oProducto.precioNeto | noDisponible }} €</td></tr>
+          <tr><th>PRO FAC / FFAC / NETON</th><td>{{ oProducto.pro_fac | noDisponible }} / {{ oProducto.pro_ffac | noDisponible }} / {{ oProducto.pro_neton | noDisponible }}</td></tr>
 
-        <!-- METADATOS Y ESTADO -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Artículo Sustituido</th>
-          <td class="text-start ps-5">{{ oProducto.articuloSustituido | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">ART MKD</th>
-          <td class="text-start ps-5">{{ oProducto.art_mkd | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Status</th>
-          <td class="text-start ps-5">{{ oProducto.status | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Observaciones</th>
-          <td class="text-start ps-5">{{ oProducto.observaciones | noDisponible }}</td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Insertado por</th>
-          <td class="text-start ps-5">
-            {{ oProducto.insertedBy | noDisponible }} - {{ oProducto.insertedAt | noDisponible }}
-          </td>
-        </tr>
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Actualizado por</th>
-          <td class="text-start ps-5">
-            {{ oProducto.updateBy | noDisponible }} - {{ oProducto.updateAt | noDisponible }}
-          </td>
-        </tr>
+          <!-- PROVEEDOR -->
+          <tr><th>Proveedor</th><td>{{ oProducto.proveedor | noDisponible }}</td></tr>
+          <tr><th>Referencia Proveedor</th><td>{{ oProducto.referenciaProveedor | noDisponible }}</td></tr>
 
-        <!-- IMÁGENES -->
-        <tr>
-          <th class="bg-primary text-white text-end pe-5">Imágenes</th>
-          <td class="text-start ps-5">
-            <ng-container *ngIf="oProducto.imagenes && oProducto.imagenes.length > 0; else sinImagenes">
-              <div
-                #carouselProductoImagenes
-                id="carouselProductoImagenes"
-                class="carousel slide"
-                data-bs-ride="carousel"
-              >
-                <div class="carousel-inner">
-                  <div
-                    class="carousel-item"
-                    *ngFor="let img of oProducto.imagenes; let i = index"
-                    [class.active]="i === 0"
-                  >
-                    <img
-                      [src]="img.imagenUrl!.startsWith('http') ? img.imagenUrl : 'http://localhost:8086' + img.imagenUrl"
-                      class="d-block w-100"
-                      alt="Imagen del producto"
-                      style="max-height: 300px; object-fit: contain; border-radius: 8px"
-                    />
-                  </div>
-                </div>
-                <div class="text-center mt-2" *ngIf="totalImagenes > 1">
-                  Total de Imágenes: {{ totalImagenes }}
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProductoImagenes" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Anterior</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselProductoImagenes" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Siguiente</span>
-                </button>
-              </div>
-            </ng-container>
-            <ng-template #sinImagenes>
-              <span class="text-muted">No hay imágenes disponibles</span>
-            </ng-template>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+          <!-- METADATOS Y ESTADO -->
+          <tr><th>Artículo Sustituido</th><td>{{ oProducto.articuloSustituido | noDisponible }}</td></tr>
+          <tr><th>ART MKD</th><td>{{ oProducto.art_mkd | noDisponible }}</td></tr>
+          <tr><th>Status</th><td>{{ oProducto.status | noDisponible }}</td></tr>
+          <tr><th>Observaciones</th><td>{{ oProducto.observaciones | noDisponible }}</td></tr>
+          <tr><th>Insertado por</th><td>{{ oProducto.insertedBy | noDisponible }} - {{ oProducto.insertedAt | noDisponible }}</td></tr>
+          <tr><th>Actualizado por</th><td>{{ oProducto.updateBy | noDisponible }} - {{ oProducto.updateAt | noDisponible }}</td></tr>
+        </tbody>
+      </table>
 
-    <div class="d-flex justify-content-center mt-4">
-      <a class="btn btn-warning mt-4 mx-1" href="/admin/producto/plist">
-        <i class="bi bi-list"></i> Ir a listado de Productos
-      </a>
-      <a class="btn btn-primary mt-4 mx-1" [routerLink]="['/admin/producto/edit', oProducto.id]">
-        <i class="bi bi-pencil"></i> Editar
-      </a>
-      <a class="btn btn-danger mt-4 mx-1" [routerLink]="['/admin/producto/delete', oProducto.id]">
-        <i class="bi bi-trash"></i> Borrar
-      </a>
+      <div class="d-flex justify-content-center mt-4">
+        <a class="btn btn-warning mx-1" href="/admin/producto/plist">
+          <i class="bi bi-list"></i> Listado Productos
+        </a>
+        <a class="btn btn-primary mx-1" [routerLink]="['/admin/producto/edit', oProducto.id]">
+          <i class="bi bi-pencil"></i> Editar Producto
+        </a>
+      </div>
     </div>
+
+    <!-- Parte derecha: Imágenes -->
+    <div class="col-lg-6 col-md-12 text-center">
+      <ng-container *ngIf="oProducto.imagenes && oProducto.imagenes.length > 0; else sinImagenes">
+        <div id="carouselProductoImagenes" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item" *ngFor="let img of oProducto.imagenes; let i = index" [class.active]="i === 0">
+              <img [src]="img.imagenUrl!.startsWith('http') ? img.imagenUrl : 'http://localhost:8086' + img.imagenUrl" class="d-block w-100" alt="Imagen del producto" style="max-height: 300px; object-fit: contain; border-radius: 8px" />
+            </div>
+          </div>
+          <div class="text-center mt-2 total-imagenes">
+            Total de Imágenes: <span id="imageCount">{{ totalImagenes }}</span>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselProductoImagenes" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselProductoImagenes" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
+        </div>
+      </ng-container>
+      <ng-template #sinImagenes>
+        <span class="text-muted">No hay imágenes disponibles</span>
+      </ng-template>
+
+      <!-- Documentos actuales -->
+      <div class="mb-4" *ngIf="oProducto && oProducto.documentos && oProducto.documentos.length > 0">
+        <label class="form-label fw-bold">Documentos actuales</label>
+        <ul class="list-group">
+          <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let doc of oProducto.documentos">
+            <a [href]="'http://localhost:8086' + doc.documentoUrl" target="_blank">{{ doc.nombreOriginal || 'Documento sin nombre' }}</a>
+          </li>
+        </ul>
+      </div>
+
+    
+
   </div>
 </div>
